test/regress/cov-post-lookup-breaks.test
; Coverage test for post.cc lines 521, 526, 531
; Switch breaks for N/O/R lookups when name is longer than 1 char

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format "%(Nope)\n" Expenses -> 1
__ERROR__
While calculating format expression:
  Nope
While evaluating value expression:
  Nope
  ^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Nope'
end test
